# anitomyscript

./: .gitignore  .gitmodules  .npmignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  gulpfile.js  index.d.ts  index.html  index.js  index.md  package-lock.json  package.json  pnpm-lock.yaml
_includes/: demo.html
include/: README.md
include/anitomy/: anitomy.cpp  anitomy.h  element.cpp  element.h  keyword.cpp  keyword.h  options.h  parser.cpp  parser.h  parser_helper.cpp  parser_number.cpp  string.cpp  string.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
include/test/: data.json
src/: anitomy_script.cpp  anitomyscript.cpp
test/: anitomyscript.spec.js  debug.js
